gnome-shell: Fix popup-menu-item alignment
Fixes popup-menu-item horizontal alignment to center of the menus,
which in addition aligins the popup-menu-ornament better at the
center of the menu padding.

--- a/common/gnome-shell/3.32/sass/_common.scss
+++ b/common/gnome-shell/3.32/sass/_common.scss
@@ -686,7 +686,7 @@ StScrollBar {
 
 .popup-menu-ornament {
   text-align: right;
-  margin-left: 10px;
+  margin-left: 4px;
   width: 16px;
 }
 
